--- a/ASPWebApplication/Views/Category/Delete.cshtml
+++ b/ASPWebApplication/Views/Category/Delete.cshtml
@@ -1,24 +1,22 @@
 ﻿@model Category
 
 <form method="post">
+	<input asp-for="Id" hidden/>
 	<div class="border p-3 mt-4">
 		<div class="row pb-2">
-		<h2 class="text-primary">Create Category</h2><hr/>
+			<h2 class="text-primary">Delete Category</h2><hr />
 		</div>
-		<div asp-validation-summary="All"></div>
 		<div class="mb-3 row p-1">
 			<label asp-for="Name" class="p-0"></label>
-			<input asp-for="Name" type="text" class="form-control"/>
-			<span asp-validation-for="Name" class="text-danger"></span>
+			<input asp-for="Name" disabled type="text" class="form-control" />
 		</div>
 		<div class="mb-3 row p-1">
 			<label asp-for="DisplayOrder" class="p-0"></label>
-			<input asp-for="DisplayOrder" type="text" class="form-control" />
-			<span asp-validation-for="DisplayOrder" class="text-danger"></span>
+			<input asp-for="DisplayOrder" disabled type="text" class="form-control" />
 		</div>
 		<div class="row">
 			<div class="col-6 col-md-3">
-				<button type="submit" class="btn btn-primary form-control">Create</button>
+				<button type="submit" class="btn btn-danger form-control">Delete</button>
 
 			</div>
 			<div class="col-6 col-md-3">
@@ -30,6 +28,6 @@
 </form>
 @section Scripts {
 	@{
-		<partial name="_ValidationScriptsPartial"/>
+		<partial name="_ValidationScriptsPartial" />
 	}
 }
