--- a/ASPWebApplication/Views/Category/Index.cshtml
+++ b/ASPWebApplication/Views/Category/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<Category>
 
-	<div class="container">
+<div class="container">
 		<div class="row pt-4 pb-3">
 			<div class = "col-6">
 			<h2 class="text-primary"> Category List</h2>
@@ -14,20 +14,33 @@
 	</div>
 
 <table class="table table-bordered table-striped">
-	<tr>
-		<th>
-			Category Name
-		</th>
-		<th>
-			Display Order
-		</th>
-	</tr>
+	<thead>
+		<tr>
+			<th>
+				Category Name
+			</th>
+			<th>
+				Display Order
+			</th>
+		</tr>
+	</thead>
+	
 	<tbody>
 		@foreach (var obj in Model.OrderBy(u=>u.DisplayOrder))
 		{
 			<tr>
 				<td>@obj.Name</td>
 				<td>@obj.DisplayOrder</td>
+				<td>
+					<div class="w-75 btn-group" role="group">
+						<a asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+							<i class="bi bi-pencil-square"></i> Edit
+						</a>
+						<a asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
+							<i class="bi bi-trash-fill"></i> Delete
+						</a>
+					</div>
+				</td>
 			</tr>
 		}
 	</tbody>
