Adding CRUD operation to Product.

--- a/ASPWebApplication/Areas/Admin/Views/_ViewImports.cshtml
+++ b/ASPWebApplication/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using ASPWebApplication
-@using ASPWebApplication.Areas.Admin.Models
+@using ASPWebApplication.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
