Adding View Model for categories in Product Controller

--- a/ASPWebApplication/Areas/Admin/Views/Product/Create.cshtml
+++ b/ASPWebApplication/Areas/Admin/Views/Product/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Product
+﻿@model ASPWebApplication.Models.ViewModels.ProductVM
 
 <form method="post">
 	<div class="border p-3 mt-4">
@@ -7,34 +7,46 @@
 		</div>
 		<div asp-validation-summary="All"></div>
 		<div class="mb-3 row p-1">
-			<label asp-for="Title" class="p-0"></label>
-			<input asp-for="Title" type="text" class="form-control" />
-			<span asp-validation-for="Title" class="text-danger"></span>
+			<label asp-for="Product.Title" class="p-0"></label>
+			<input asp-for="Product.Title" type="text" class="form-control" />
+			<span asp-validation-for="Product.Title" class="text-danger"></span>
 		</div>
 		<div class="mb-3 row p-1">
-			<label asp-for="Description" class="p-0"></label>
-			<input asp-for="Description" type="textarea" class="form-control" />
-			<span asp-validation-for="Description" class="text-danger"></span>
+			<label asp-for="Product.Description" class="p-0"></label>
+			<input asp-for="Product.Description" type="textarea" class="form-control" />
+			<span asp-validation-for="Product.Description" class="text-danger"></span>
 		</div>
 		<div class="mb-3 row p-1">
-			<label asp-for="ListPrice" class="p-0"></label>
-			<input asp-for="ListPrice" type="text" class="form-control" />
-			<span asp-validation-for="ListPrice" class="text-danger"></span>
+			<label asp-for="Product.ListPrice" class="p-0"></label>
+			<input asp-for="Product.ListPrice" type="text" class="form-control" />
+			<span asp-validation-for="Product.ListPrice" class="text-danger"></span>
 		</div>
 		<div class="mb-3 row p-1">
-			<label asp-for="Director" class="p-0"></label>
-			<input asp-for="Director" type="text" class="form-control" />
-			<span asp-validation-for="Director" class="text-danger"></span>
+			<label asp-for="Product.Director" class="p-0"></label>
+			<input asp-for="Product.Director" type="text" class="form-control" />
+			<span asp-validation-for="Product.Director" class="text-danger"></span>
 		</div>
 		<div class="mb-3 row p-1">
-			<label asp-for="Price" class="p-0"></label>
-			<input asp-for="Price" type="text" class="form-control" />
-			<span asp-validation-for="Price" class="text-danger"></span>
+			<label asp-for="Product.Price" class="p-0"></label>
+			<input asp-for="Product.Price" type="text" class="form-control" />
+			<span asp-validation-for="Product.Price" class="text-danger"></span>
 		</div>
 		<div class="mb-3 row p-1">
-			<label asp-for="Price50" class="p-0"></label>
-			<input asp-for="Price50" type="text" class="form-control" />
-			<span asp-validation-for="Price50" class="text-danger"></span>
+			<label asp-for="Product.Price50" class="p-0"></label>
+			<input asp-for="Product.Price50" type="text" class="form-control" />
+			<span asp-validation-for="Product.Price50" class="text-danger"></span>
+		</div>
+		<div class="mb-3 row p-1">
+			<label asp-for="Product.ImageUrl" class="p-0"></label>
+			<input asp-for="Product.ImageUrl" type="text" class="form-control" />
+			<span asp-validation-for="Product.ImageUrl" class="text-danger"></span>
+		</div>
+		<div class="mb-3 row p-1">
+			<label asp-for="Product.CategoryId" class="p-0"></label>
+			<select asp-for="Product.CategoryId" asp-items="@Model.Categories" type="text" class="form-select">
+				<option disabled selected>-- Select Category --</option>
+			</select>
+			<span asp-validation-for="Product.CategoryId" class="text-danger"></span>
 		</div>
 		<div class="row">
 			<div class="col-6 col-md-3">
