--- a/ASPWebApplication/Areas/Admin/Views/_ViewImports.cshtml
+++ b/ASPWebApplication/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ASPWebApplication
 @using ASPWebApplication.Models
+@using ASPWebApplication.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
