--- a/ASPWebApplication/Areas/Admin/Views/Product/Index.cshtml
+++ b/ASPWebApplication/Areas/Admin/Views/Product/Index.cshtml
@@ -6,7 +6,7 @@
 			<h2 class="text-primary"> Product List</h2>
 		</div>
 		<div class="col-6 text-end">
-			<a asp-action="Create" class="btn btn-outline-primary">
+			<a asp-action="Upsert" class="btn btn-outline-primary">
 				<i class="bi bi-plus-circle"></i> Create new Product
 			</a>
 		</div>
@@ -49,7 +49,7 @@
 				<td>@obj.Price50</td>
 				<td>
 					<div class="w-75 btn-group" role="group">
-						<a asp-controller="Product" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+						<a asp-controller="Product" asp-action="Upsert" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
 							<i class="bi bi-pencil-square"></i> Edit
 						</a>
 						<a asp-controller="Product" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
