--- a/ASPWebApplication/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/ASPWebApplication/Areas/Admin/Views/Product/Upsert.cshtml
@@ -1,9 +1,10 @@
 ﻿@model ASPWebApplication.Models.ViewModels.ProductVM
 
-<form method="post">
+<form method="post" enctype="multipart/form-data">
+	<input asp-for="Product.Id" hidden/>
 	<div class="border p-3 mt-4">
 		<div class="row pb-2">
-			<h2 class="text-primary">Create Product</h2><hr />
+			<h2 class="text-primary"> @(Model.Product.Id != 0 ?"Update": "Create" ) Product</h2><hr />
 		</div>
 		<div asp-validation-summary="All"></div>
 		<div class="mb-3 row p-1">
@@ -13,8 +14,7 @@
 		</div>
 		<div class="mb-3 row p-1">
 			<label asp-for="Product.Description" class="p-0"></label>
-			<input asp-for="Product.Description" type="textarea" class="form-control" />
-			<span asp-validation-for="Product.Description" class="text-danger"></span>
+			<textarea asp-for="Product.Description" type="textarea" class="form-control"></textarea>
 		</div>
 		<div class="mb-3 row p-1">
 			<label asp-for="Product.ListPrice" class="p-0"></label>
@@ -38,8 +38,8 @@
 		</div>
 		<div class="mb-3 row p-1">
 			<label asp-for="Product.ImageUrl" class="p-0"></label>
-			<input asp-for="Product.ImageUrl" type="text" class="form-control" />
-			<span asp-validation-for="Product.ImageUrl" class="text-danger"></span>
+			<input type="file" class="form-control" />
+			
 		</div>
 		<div class="mb-3 row p-1">
 			<label asp-for="Product.CategoryId" class="p-0"></label>
@@ -50,8 +50,15 @@
 		</div>
 		<div class="row">
 			<div class="col-6 col-md-3">
+				@if( Model.Product.Id != 0)
+				{
+					<button type="submit" class="btn btn-primary form-control">Update</button>
+
+				}
+				else {
 				<button type="submit" class="btn btn-primary form-control">Create</button>
 
+				}
 			</div>
 			<div class="col-6 col-md-3">
 				<a asp-controller="Product" asp-action="Index" class="btn btn-secondary border form-control">Back to List</a>
@@ -61,6 +68,20 @@
 	</div>
 </form>
 @section Scripts {
+	<script>
+		tinymce.init({
+		  selector: 'textarea',
+		  plugins: [
+			// Core editing features
+			'anchor', 'autolink', 'charmap', 'codesample', 'emoticons', 'image', 'link', 'lists', 'media', 'searchreplace', 'table', 'visualblocks', 'wordcount',
+			// Your account includes a free trial of TinyMCE premium features
+			// Try the most popular premium features until Oct 17, 2024:
+			'checklist', 'mediaembed', 'casechange', 'export', 'formatpainter', 'pageembed', 'a11ychecker', 'tinymcespellchecker', 'permanentpen', 'powerpaste', 'advtable', 'advcode', 'editimage', 'advtemplate', 'mentions', 'tableofcontents', 'footnotes', 'mergetags', 'autocorrect', 'typography', 'inlinecss', 'markdown',
+		  ],
+		  toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | link image media table mergetags | addcomment showcomments | spellcheckdialog a11ycheck typography | align lineheight | checklist numlist bullist indent outdent | emoticons charmap | removeformat',
+
+		});
+	</script>
 	@{
 		<partial name="_ValidationScriptsPartial" />
 	}
