--- a/ASPWebApplication/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/ASPWebApplication/Areas/Admin/Views/Product/Upsert.cshtml
@@ -2,70 +2,81 @@
 
 <form method="post" enctype="multipart/form-data">
 	<input asp-for="Product.Id" hidden/>
-	<div class="border p-3 mt-4">
-		<div class="row pb-2">
-			<h2 class="text-primary"> @(Model.Product.Id != 0 ?"Update": "Create" ) Product</h2><hr />
-		</div>
-		<div asp-validation-summary="All"></div>
-		<div class="mb-3 row p-1">
-			<label asp-for="Product.Title" class="p-0"></label>
-			<input asp-for="Product.Title" type="text" class="form-control" />
-			<span asp-validation-for="Product.Title" class="text-danger"></span>
-		</div>
-		<div class="mb-3 row p-1">
-			<label asp-for="Product.Description" class="p-0"></label>
-			<textarea asp-for="Product.Description" type="textarea" class="form-control"></textarea>
-		</div>
-		<div class="mb-3 row p-1">
-			<label asp-for="Product.ListPrice" class="p-0"></label>
-			<input asp-for="Product.ListPrice" type="text" class="form-control" />
-			<span asp-validation-for="Product.ListPrice" class="text-danger"></span>
-		</div>
-		<div class="mb-3 row p-1">
-			<label asp-for="Product.Director" class="p-0"></label>
-			<input asp-for="Product.Director" type="text" class="form-control" />
-			<span asp-validation-for="Product.Director" class="text-danger"></span>
-		</div>
-		<div class="mb-3 row p-1">
-			<label asp-for="Product.Price" class="p-0"></label>
-			<input asp-for="Product.Price" type="text" class="form-control" />
-			<span asp-validation-for="Product.Price" class="text-danger"></span>
-		</div>
-		<div class="mb-3 row p-1">
-			<label asp-for="Product.Price50" class="p-0"></label>
-			<input asp-for="Product.Price50" type="text" class="form-control" />
-			<span asp-validation-for="Product.Price50" class="text-danger"></span>
-		</div>
-		<div class="mb-3 row p-1">
-			<label asp-for="Product.ImageUrl" class="p-0"></label>
-			<input type="file" class="form-control" />
-			
-		</div>
-		<div class="mb-3 row p-1">
-			<label asp-for="Product.CategoryId" class="p-0"></label>
-			<select asp-for="Product.CategoryId" asp-items="@Model.Categories" type="text" class="form-select">
-				<option disabled selected>-- Select Category --</option>
-			</select>
-			<span asp-validation-for="Product.CategoryId" class="text-danger"></span>
-		</div>
-		<div class="row">
-			<div class="col-6 col-md-3">
-				@if( Model.Product.Id != 0)
-				{
-					<button type="submit" class="btn btn-primary form-control">Update</button>
+	<div class=" row">
+		<div class="col-10">
+			<div class="border p-3 mt-4">
+				<div class="row pb-2">
+					<h2 class="text-primary"> @(Model.Product.Id != 0 ? "Update" : "Create") Product</h2><hr />
+				</div>
+				<div asp-validation-summary="All"></div>
+				<div class="mb-3 row p-1">
+					<label asp-for="Product.Title" class="p-0"></label>
+					<input asp-for="Product.Title" type="text" class="form-control" />
+					<span asp-validation-for="Product.Title" class="text-danger"></span>
+				</div>
+				<div class="mb-3 row p-1">
+					<label asp-for="Product.Description" class="p-0"></label>
+					<textarea asp-for="Product.Description" type="textarea" class="form-control"></textarea>
+				</div>
+				<div class="mb-3 row p-1">
+					<label asp-for="Product.ListPrice" class="p-0"></label>
+					<input asp-for="Product.ListPrice" type="text" class="form-control" />
+					<span asp-validation-for="Product.ListPrice" class="text-danger"></span>
+				</div>
+				<div class="mb-3 row p-1">
+					<label asp-for="Product.Director" class="p-0"></label>
+					<input asp-for="Product.Director" type="text" class="form-control" />
+					<span asp-validation-for="Product.Director" class="text-danger"></span>
+				</div>
+				<div class="mb-3 row p-1">
+					<label asp-for="Product.Price" class="p-0"></label>
+					<input asp-for="Product.Price" type="text" class="form-control" />
+					<span asp-validation-for="Product.Price" class="text-danger"></span>
+				</div>
+				<div class="mb-3 row p-1">
+					<label asp-for="Product.Price50" class="p-0"></label>
+					<input asp-for="Product.Price50" type="text" class="form-control" />
+					<span asp-validation-for="Product.Price50" class="text-danger"></span>
+				</div>
+				<div class="mb-3 row p-1">
+					<label asp-for="Product.ImageUrl" class="p-0"></label>
+					<input type="file" name="file" class="form-control" />
 
-				}
-				else {
-				<button type="submit" class="btn btn-primary form-control">Create</button>
+				</div>
+				<div class="mb-3 row p-1">
+					<label asp-for="Product.CategoryId" class="p-0"></label>
+					<select asp-for="Product.CategoryId" asp-items="@Model.Categories" type="text" class="form-select">
+						<option disabled selected>-- Select Category --</option>
+					</select>
+					<span asp-validation-for="Product.CategoryId" class="text-danger"></span>
+				</div>
+				<div class="row">
+					<div class="col-6 col-md-3">
+						@if (Model.Product.Id != 0)
+						{
+							<button type="submit" class="btn btn-primary form-control">Update</button>
 
-				}
+						}
+						else
+						{
+							<button type="submit" class="btn btn-primary form-control">Create</button>
+
+						}
+					</div>
+					<div class="col-6 col-md-3">
+						<a asp-controller="Product" asp-action="Index" class="btn btn-secondary border form-control">Back to List</a>
+
+					</div>
+				</div>
 			</div>
-			<div class="col-6 col-md-3">
-				<a asp-controller="Product" asp-action="Index" class="btn btn-secondary border form-control">Back to List</a>
-
-			</div>
+		</div>
+		<div class="col-2">
+			<img src="@Model.Product.ImageUrl" width="100%"
+				 style="border-radius:5px; border:1px solid #bbb9b9" />
 		</div>
 	</div>
+	
+	
 </form>
 @section Scripts {
 	<script>
