--- a/ASPWebApplication/Areas/Admin/Views/Product/Index.cshtml
+++ b/ASPWebApplication/Areas/Admin/Views/Product/Index.cshtml
@@ -13,7 +13,7 @@
 	</div>
 </div>
 
-<table class="table table-bordered table-striped">
+<table class="table table-bordered table-striped" id="myTable">
 	<thead>
 		<tr>
 			<th>
@@ -34,31 +34,40 @@
 			<th>
 				List Price (50+)
 			</th>
+			<th>
+				Category
+			</th>
+			<th></th>
 		</tr>
 	</thead>
 
-	<tbody>
-		@foreach (var obj in Model.OrderBy(u => u.Title))
-		{
-			<tr>
-				<td>@obj.Title</td>
-				<td>@obj.Description</td>
-				<td>@obj.Director</td>
-				<td>@obj.ListPrice</td>
-				<td>@obj.Price</td>
-				<td>@obj.Price50</td>
-				<td>
-					<div class="w-75 btn-group" role="group">
-						<a asp-controller="Product" asp-action="Upsert" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
-							<i class="bi bi-pencil-square"></i> Edit
-						</a>
-						<a asp-controller="Product" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
-							<i class="bi bi-trash-fill"></i> Delete
-						</a>
-					</div>
-				</td>
-			</tr>
-		}
-	</tbody>
+	@*  <tbody>
+	 	@foreach (var obj in Model.OrderBy(u => u.Title))
+	 	{
+	 		<tr>
+	 			<td>@obj.Title</td>
+	 			<td>@obj.Description</td>
+	 			<td>@obj.Director</td>
+	 			<td>@obj.ListPrice</td>
+	 			<td>@obj.Price</td>
+	 			<td>@obj.Price50</td>
+	 			<td>@obj.Category.Name</td>
+
+	 			<td>
+	 				<div class="w-75 btn-group" role="group">
+	 					<a asp-controller="Product" asp-action="Upsert" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+	 						<i class="bi bi-pencil-square"></i> Edit
+	 					</a>
+	 					<a asp-controller="Product" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
+	 						<i class="bi bi-trash-fill"></i> Delete
+	 					</a>
+	 				</div>
+	 			</td>
+	 		</tr>
+	 	}
+	 </tbody> *@
 </table>
+@section Scripts {
+	<script src="~/js/product.js"></script>
+}
 
